[package]
name = "pldcraft-logic-common"
version = "0.1.0"
authors = ["Andreas Lokko", "Andrey Penechko", "aolko", "Connor Scialdone", "James Martin <james@jtmar.me>", "Krovius", "VermillionAzure", "Zekka Nelson"]
description = "The game logic shared between both the client and server implementation of pldcraft."
documentation = "https://github.com/pldcraft/pldcraft/wiki"
license = "GPL-3.0-or-later"
edition = "2018"
